--- a/04-Pandas/Instructions/HeroesOfPymoli/ABC.ipynb
+++ b/04-Pandas/Instructions/HeroesOfPymoli/ABC.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -139,14 +139,17 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_df.head()"
+    "#purchase_df=len(purchase_df['SN'].unique())\n",
+    "#purchase_df\n",
+    "\n",
+    "purchase_df.head()\n"
    ]
   },
   {
@@ -165,25 +168,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "576"
+       "   Total Players\n",
+       "0            576"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "players_df = purchase_df.groupby(\"SN\")[\"SN\"].unique()\n",
-    "players_df.count()\n",
+    "players_df = len(purchase_df[\"SN\"].unique())\n",
+    "players_df\n",
+    "total = pd.DataFrame({\"Total Players\": [players_df]})\n",
+    "total\n",
     "\n"
    ]
   },
@@ -212,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -220,25 +257,25 @@
     {
      "data": {
       "text/plain": [
-       "179"
+       "183"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "items_df = purchase_df.groupby(\"Item Name\")[\"Item Name\"].nunique()\n",
-    "items_df.count()\n",
+    "unique_items = len(purchase_df[\"Item ID\"].unique())\n",
+    "unique_items\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +378,7 @@
        "max     779.000000   45.000000  183.000000    4.990000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +436,7 @@
        "0                      183        3.050987                780         2379.77"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +530,7 @@
        "Other / Non-Disclosed                   1.91           11"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,28 +574,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                   0.14\n",
-       "Male                     0.84\n",
-       "Other / Non-Disclosed    0.02\n",
-       "Name: SN, dtype: float64"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -571,56 +586,6 @@
     "* Percentage and Count of Other / Non-Disclosed\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                    361.94\n",
-       "Male                     1967.64\n",
-       "Other / Non-Disclosed      50.19\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gender_total_df = purchase_df.groupby(\"Gender\")[\"Price\"].sum()\n",
-    "gender_total_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                   3.20\n",
-       "Male                     3.02\n",
-       "Other / Non-Disclosed    3.35\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gender_average_df = purchase_df.groupby(\"Gender\")[\"Price\"].mean()\n",
-    "gender_average_df.round(2)"
    ]
   },
   {
@@ -651,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +693,7 @@
        "Other / Non-Disclosed               $50.19             $4.56  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +866,7 @@
        "40+                 12                   2.08"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1040,7 @@
        "40+                   $3.19  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,8 +1090,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1220,7 +1187,7 @@
        "Iskadarya95               $13.10  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1358,7 @@
        "92      Final Critic                                               $39.04  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1560,7 +1527,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,6 +1542,13 @@
     "\n",
     "purchase_profitable_items_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
